[package]
name = "quantified"
version = "0.1.1"
license = "MIT"
description = "Specify the universe: None, Some, Excluding, and All"
repository = "https://github.com/nhynes/quantified"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
edition = "2018"
categories = ["no-std", "rust-patterns"]

[dependencies]
